kube-manifest/api-services.yml
apiVersion: v1
kind: Service
metadata:
  name: book-api
spec:
  selector:
    app: library
    microservice: bookapi
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: member-api
spec:
  selector:
    app: library
    microservice: memberapi
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: issue-api
spec:
  selector:
    app: library
    microservice: issueapi
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
spec:
  selector:
    app: library
    microservice: swagger-ui
  ports:
  - port: 80
    targetPort: 8080
